# rmk-gui

./: .editorconfig  .gitattributes  .gitignore  .ignore  .prettierignore  .prettierrc.toml  AGENTS.md  CHANGELOG.md  README.md  TODO.md  eslint.config.mjs  index.html  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  skills-lock.json  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
.agents/skills/neverthrow/: SKILL.md
.agents/skills/neverthrow/references/: advanced-patterns.md  api-reference.md
.agents/skills/nushell/: SKILL.md
.agents/skills/nushell/references/: data-commands.md  externals-io-formats.md  language-types.md  scripts-modules-config.md
.github/: dependabot.yml
.github/workflows/: build-publish.yml  build-test.yml  ci.yml  deploy.yml  release-please.yml  release-please.yml.yml  vercel.yml  web-deploy.yml
.slim/: clonedeps.json
app/: app.vue
app/assets/css/: tailwind.css
app/components/: Aside.vue  AsideCard.vue  ConnHID.vue  Header.vue  HidUnsupport.vue  Key.vue  KeyBoard.vue  LayerSelected.vue  LevelSelected.vue  MapperDialog.vue  MapperPanel.vue  Setting.vue  Switcher.vue  TauriHID.vue  Theme.vue  WebHID.vue
app/components/Aside/: Aside.vue  Card.vue
app/components/ConnHID/: ConnHID.vue  Tauri.vue  Web.vue
app/components/KeyMap/: Key.vue  KeyBoard.vue  KeyMap.vue  KeyboardCanvas.vue  LayerSelected.vue  LayerSwitcher.vue  MapperPanel.vue  MappingKey.vue
app/components/Macros/: Button.vue  List.vue  MacroSelected.vue  MacroSwitcher.vue  Macros.vue  Select.vue
app/components/common/: Key.vue  Key_bak.vue  Keyboard.vue  Keyboard_bak.vue  MapperPanel.vue  Switcher.vue
app/components/layout/: Aside.vue  ConnWeb.vue  Header.vue
app/components/macros/: MacrosList.vue  MacrosSelect.vue
app/components/settings/: SettingCard.vue  Theme.vue  ThemeCard.vue
app/composables/: useScreenWidth.ts
app/pages/: combos.vue  export.vue  index.vue  keymap.vue  keymap_bak.vue  macros.vue  marco.vue  settings.vue
app/plugins/: pinia-plugin-persistedstate.ts  piniaPersist.client.ts
app/stores/: hidDevice.ts  keyboard.ts  pageKeymap.ts  pageMacros.ts  setting.ts  theme.ts
app/types/: constants.ts  hid.ts  keycode.ts  macros.ts  storage.ts  vial.ts
app/utils/: StringMap.ts  hid.ts  storage.ts  stringContainer.ts  tauri.ts  typeUtils.ts  vial.ts
codegen/: gen.py  lib.py  template.ts
docs/: book.toml  keyboard-store-architecture.md  rynk-client-borrow-constraint.md
docs/src/: README.md  SUMMARY.md  integration.md  kle.md  rmk-gui-transport.md
docs/src/native-transports/: ble.md  serial.md
docs/src/rynk/: README.md  api-reference.md  architecture.md  layout.md  protocol.md
docs/src/rynk-wasm/: README.md  client.md  js-byte-link.md  lifecycle.md  transport.md
i18n/locales/: en.json  zh.json
qemu/: Cargo.toml  build.rs  keyboard.toml  run.mjs
qemu/src/: main.rs  time_driver.rs
scripts/: build-rynk-wasm.mjs  build-rynk-wasm.nu  build-rynk-wasm.py
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ble.rs  cmds.rs  lib.rs  main.rs  transport.rs  utils.rs
src-tauri/src/models/: app_state.rs  mod.rs  vial_device.rs
src-tauri/src/transport/: ble.rs  mod.rs  serial.rs  tcp.rs
src-wasm/: Cargo.toml
src-wasm/src/: commands.rs  lib.rs  utils.rs
src-wasm/src/cmds/: home.rs  keymap.rs  mod.rs
src-wasm/src/models/: app_state.rs  keycode.rs  mod.rs  vial_device.rs
src/assets/css/: main.css
src/components/: ToolsBar.tsx
src/rynk/: core.ts  index.ts  tauri.ts  web.ts
src/rynk/wasm/: .build-meta.json  README.md  package.json  rynk_wasm.d.ts  rynk_wasm.js  rynk_wasm_bg.wasm  rynk_wasm_bg.wasm.d.ts
src/store/: actions.ts  driver.ts  index.ts  keyboard.ts  sync.ts
src/store/keyboard/: actions.ts  errors.ts  index.ts  session.ts  store.ts  types.ts  utils.ts
tools/: 1.py
wasm/: Cargo.toml
