[package]
name = "rmk-qemu-riscv"
version = "0.2.0"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
edition = "2024"
license = "MIT OR Apache-2.0"

# NOTE: This example builds against the locally cloned rmk source at
# `.slim/clonedeps/repos/HaoboGu__rmk` (see AGENTS.md). The path is relative
# to this Cargo.toml.
[dependencies]
rmk = { path = "../.slim/clonedeps/repos/HaoboGu__rmk/rmk", default-features = false, features = ["rynk", "bulk"] }
embassy-executor = { version = "0.10", features = ["platform-riscv32", "executor-thread"] }
embassy-futures = { version = "0.1" }
embassy-time = { version = "0.5", features = ["mock-driver", "generic-queue-8"] }
riscv-rt = "0.18"
riscv = { version = "0.16", features = ["critical-section-single-hart"] }
semihosting = { version = "0.1", features = ["stdio"] }
embedded-io-async = "0.7"
panic-halt = "1"
static_cell = "2"
uart_16550 = "0.6"
