[package]
name = "rmk-qemu-riscv"
version = "0.2.0"
authors = [ "Haobo Gu <haobogu@outlook.com>" ]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
edition = "2024"
license = "MIT OR Apache-2.0"

# no_std/no_main firmware — disable std test/bench harness so `cargo clippy --all-targets` works.
[[bin]]
name = "rmk-qemu-riscv"
test = false
bench = false

[dependencies]
rmk = { git = "https://github.com/HaoboGu/rmk.git", branch = "feat/rynk", default-features = false, features = [ "rynk" ] }
embassy-executor = { version = "0.10", features = [
  "platform-riscv32",
  "executor-thread"
] }
embassy-futures = { version = "0.1" }
embassy-time = { version = "0.5", features = [
  "mock-driver",
  "generic-queue-8"
] }
riscv-rt = "0.18"
riscv = { version = "0.16", features = [ "critical-section-single-hart" ] }
semihosting = { version = "0.1", features = [ "stdio" ] }
embedded-io-async = "0.7"
panic-halt = "1"
static_cell = "2"
uart_16550 = "0.6"
