[package]
name = "rmk-gui"
version = "0.1.0"
description = "RMK GUI"
authors = [ "you" ]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "io-util",
  "sync",
  "time"
] }
tokio-serial = "5.4"
tokio-stream = "0.1"
btleplug = "0.12"
uuid = { version = "1", features = [ "v4" ] }
