[package]
name = "rmk-gui"
version = "0.1.0"
description = "RMK GUI"
authors = [ "you" ]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
serde = { version = "1.0.229", features = [ "derive" ] }
serde_json = "1.0.151"
tokio = { version = "1.53.1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "io-util",
  "sync",
  "time"
] }
tokio-serial = "5.5.0"
tokio-stream = "0.1.18"
btleplug = "0.12.0"
uuid = { version = "1.24.0", features = [ "v4" ] }

[lints.clippy]
all = "warn"
