[package]
name = "rmk-gui-web-backend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.20"
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
num_enum = "0.7"
strum = { version = "0.26", features = ["derive"] }
lazy_static = "1.5"
byteorder = "1.5"
liblzma = { version = "0.4.0", features = ["wasm"] }
futures = "0.3.31"
kle-serial = "0.3.1"
itertools = "0.14"

[dependencies.web-sys]
version = "0.3"
features = [
    'Window',
    'Hid',
    'HidDevice',
    'HidInputReportEvent',
    'Navigator',
    'HidDeviceRequestOptions',
    'console',
]
